--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -271,6 +271,7 @@
 
 \def\order#1{\mbox{$\mathcal{O}(#1)$}}
 
+\def\action#1{\mbox{\tt #1}}
 \def\basictype#1{\mbox{\color{pml@basictypecolor}\tt #1}}
 \def\class#1{\mbox{\tt #1}}
 \def\constraint#1{\mbox{\tt #1}}
@@ -278,6 +279,7 @@
 \def\decorator#1{\mbox{\tt #1}}
 \def\function#1{\mbox{\tt #1}}
 \def\identifier#1{\mbox{\tt #1}}
+\def\instance#1{\mbox{\tt #1}}
 \def\keyword#1{\mbox{\tt #1}}
 \def\literal#1{\mbox{\tt #1}}
 \def\method#1{\mbox{\tt #1}}
