--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -276,6 +276,7 @@
 \def\class#1{\mbox{\tt #1}}
 \def\constraint#1{\mbox{\tt #1}}
 \def\component#1{\mbox{\color{pml@componentcolor}\tt #1}}
+\def\defaultvalue#1{\mbox{\color{pml@defaultvaluecolor}\tt #1}}
 \def\decorator#1{\mbox{\tt #1}}
 \def\function#1{\mbox{\tt #1}}
 \def\identifier#1{\mbox{\tt #1}}
