doc/pyre: cleaned up the last to do in {components}

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -234,7 +234,6 @@
 \def\tabref#1{{Table~\ref{tab:#1}}}
 
 \def\supercite#1{\mbox{\scriptsize\raise 1.0ex\hbox{\cite{#1}}}}
-%\def\cpp{\mbox{\tt C\raise.4ex\hbox{++}}}
 
 % macros
 \def\href#1{{\footnotesize\bfseries\url{#1}}}
@@ -250,8 +249,8 @@
 \def\optimum#1{\stackrel[#1]{}{\mbox{\rm opt}}\,}
 
 \def\cc{\mbox{\tt\small C}}
-\def\cpp{\mbox{\tt\small C++}}
-%\def\cpp{\mbox{\tt C\raise.4ex\hbox{++}}}
+%\def\cpp{\mbox{\tt\small C++}}
+\def\cpp{\mbox{\tt C\raise.4ex\hbox{++}}}
 \def\fortran{{\tt\small FORTRAN}}
 \def\f90{{\tt\small FORTRAN90}}
 \def\mpi{{\tt MPI}}
