--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -680,7 +680,7 @@
 %
   \label{frame:srtm-pfg}
 %
-  \frametitle{Configuration --- \identifier{pfg}}
+  \frametitle{Configuration --- the preferred formal}
 %
   \begin{itemize}
 %
@@ -720,7 +720,7 @@
 %
   \label{frame:srtm-pml}
 %
-  \frametitle{Configuration --- \identifier{pml}}
+  \frametitle{Configuration --- an XML dialect}
 %
   \begin{itemize}
 %
@@ -762,7 +762,7 @@
 %
   \label{frame:srtm-cfg}
 %
-  \frametitle{Configuration --- \identifier{cfg}}
+  \frametitle{Configuration --- windows inspired format}
 %
   \begin{itemize}
 %
@@ -908,6 +908,8 @@
 % --------------------------------------
 \begin{frame}[fragile]
 %
+  \label{frame:components-harness}
+%
   \frametitle{A simple harness}
 %
   \vskip -3ex
@@ -988,8 +990,8 @@
 %
   \item let's first focus on what is needed for \component{SRTM} to advertise its capabilities
     \begin{itemize}
-    \item our simple harness on \frameref{simpleapp} is an example of a component that
-      expresses a requirement for a \dem\ stitcher
+    \item our simple application harness on \frameref{applications-simple} is an example of a
+      component that expresses a requirement for a \dem\ stitcher
     \end{itemize}
 %
   \end{itemize}
